<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mnuNew"
        android:title="@string/mnu_new">
        <menu>
            <item
                android:id="@+id/mnuGenEasy"
                android:onClick="hGenerate"
                android:title="@string/mnu_level_easy" />
            <item
                android:id="@+id/mnuGenMed"
                android:onClick="hGenerate"
                android:title="@string/mnu_level_medium" />
            <item
                android:id="@+id/mnuGenHard"
                android:onClick="hGenerate"
                android:title="@string/mnu_level_hard" />
        </menu>
    </item>
    <item
        android:id="@+id/mnuSetup"
        android:title="@string/mnu_setup">
        <menu>
            <item
                android:id="@+id/mnuSetupStart"
                android:onClick="hSetupStart"
                android:title="@string/mnu_setup_start" />
            <item
                android:id="@+id/mnuSetupFinish"
                android:onClick="hSetupFinish"
                android:title="@string/mnu_setup_finish" />
        </menu>
    </item>
    <!--
    <item
        android:id="@+id/mnuStore"
        android:onClick="hStore"
        android:title="@string/mnu_store" />
        -->
    <item
        android:id="@+id/mnuSolve"
        android:onClick="hSolve"
        android:title="@string/mnu_solve" />
    <item
        android:id="@+id/mnuPencil"
        android:title="@string/mnu_pencil">
        <menu >
            <item
                android:id="@+id/mnuPencilAuto"
                android:checkable="true"
                android:onClick="hAutoPencil"
                android:title="@string/mnu_pencil_auto" />
            <item
                android:onClick="hFillPencil"
                android:title="@string/mnu_pencil_fill" />
            <item
                android:onClick="hClearPencil"
                android:title="@string/mnu_pencil_clear" />
        </menu>
    </item>
    <item
        android:id="@+id/mnuFields"
        android:title="@string/mnu_fields" >
        <menu>
            <item
                android:onClick="hFieldCopy"
                android:title="@string/mnu_field_copy" />
            <item
                android:id="@+id/mnuSwitch"
                android:onClick="hFieldSwitch"
                android:title="@string/mnu_field_switch" />
            <item
                android:id="@+id/mnuDelete"
                android:onClick="hFieldDelete"
                android:title="@string/mnu_field_delete" />
        </menu>
    </item>
</menu>